kubernetes/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-dm
  namespace: springboot-kube
spec:
  selector:
    matchLabels:
      app: auth-service
      version: V1.0.0
  replicas: 2
  template:
    metadata:
      labels:
        app: auth-service
        version: V1.0.0
    spec:
      containers:
        - name: auth-service
          image: local-dtr.com/kube-auth-server:Develop
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: springboot-kube
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: auth-service
    version: V1.0.0
  sessionAffinity: None
  type: ClusterIP
