kubernetes/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-service-dm
  namespace: springboot-kube
spec:
  selector:
    matchLabels:
      app: consumer-service
      version: V1.0.0
  replicas: 2
  # set the limit of history version
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  minReadySeconds: 60
  progressDeadlineSeconds: 180
  template:
    metadata:
      labels:
        app: consumer-service
        version: V1.0.0
    spec:
      volumes:
        - name: private-secret-volume
          secret:
            secretName: private-secret
            # select which items to be mounted
            items:
              - key: privatekey
                path: privatekey.key
        - name: tmp
          emptyDir:
            {}
      containers:
        - name: consumer-service
          image: local-dtr.com/kube-consumer-service:Develop
          # it is the best practice to config for prod.
          # imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          # batch configmap ref
          volumeMounts:
            - name: private-secret-volume
              readOnly: true
              # mount path in container
              mountPath: "/etc/private-key.key"
              # defined in volumes
              subPath: privatekey.key
            # config for java.io.tmpdir, see Dockerfile
            - name: tmp
              readOnly: false
              mountPath: "/tmp/app"
          readinessProbe:
            httpGet:
              path: /manage/info
              # use named port, same with pod:ports:name
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /manage/healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          securityContext:
            # set the root path in container is readonly
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: consumer-service-svc
  namespace: springboot-kube
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: consumer-service
    version: V1.0.0
  sessionAffinity: None
  type: ClusterIP
